# hw-2

./: CMakeLists.txt  main.c
.github/workflows/: action.yml
lib/: CMakeLists.txt
lib/include/: multi_thread.h  single_thread.h
lib/src/: multi_thread.c  single_thread.c
test/: test_multi.cpp  test_single.cpp
