cmake_minimum_required(VERSION 3.16.3)
project(hw2 C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_COMPILER "gcc-10")
set(CMAKE_C_FLAGS "-O2 -march=native -mtune=native")

include_directories(include)

add_compile_options(-Wall -Wpedantic -Werror --coverage)
add_definitions(-fprofile-arcs -ftest-coverage)

add_library(single STATIC src/single_thread.c)
target_link_libraries(single gcov -fprofile-arcs)
install(TARGETS single EXPORT singleTargets
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        INCLUDES DESTINATION include
        )
install(FILES include/single_thread.h DESTINATION include)
install(EXPORT singleTargets
        FILE singleConfig.cmake
        NAMESPACE Single::
        DESTINATION lib/cmake/Single)

add_library(multi SHARED src/multi_thread.c)
target_link_libraries(multi gcov -fprofile-arcs)
install(TARGETS multi EXPORT multiTargets
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        INCLUDES DESTINATION include
        )
install(FILES include/single_thread.h DESTINATION include)
install(EXPORT multiTargets
        FILE multiConfig.cmake
        NAMESPACE Multi::
        DESTINATION lib/cmake/Multi)
